<resources>
    <string name="app_name" translatable="false">QuickStartLessons</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <integer-array name="navigationMenu_titles_res_ids_Array">
        <item name="navigationMenu_home">@string/home</item>
        <item name="navigationMenu_history">@string/favorite</item>
        <item name="navigationMenu_scanner">@string/account</item>
    </integer-array>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_we_are_waiting_for_you">SIGN IN, WE ARE WAITING FOR YOU</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_via_sms">Reset password via SMS</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="_374">+374</string>
    <string name="xx_xxx_xxx">(XX) XXX-XXX</string>
    <string name="send_sms">Send SMS</string>
    <string name="resetpassword_via_email">ResetPassword via Email</string>
    <string name="email">Email</string>
    <string name="sample_email_com">sample@email.com</string>
    <string name="helper_text">jjjj</string>
    <string name="invalid_password">Invalid password! Must by bigger 6 Characters!</string>
    <string name="invalid_email">Invalid or empty Email address or username</string>
    <string name="field_required">The field is required</string>
    <string name="phones">Phones</string>
    <string name="products" translatable="false">All products</string>
    <string name="the_request_failed">The request failed</string>
    <string name="profile">Profile</string>
    <string name="mariam_davtyan">Mariam Davtyan</string>
    <string name="mariam_gmail_com">mariam@gmail.com</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="change_language">App language</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="choose_language">Choose Language</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Russian</string>
    <string name="armenian" translatable="false">Armenian</string>
    <string name="sms">SMS</string>
    <string name="favorites">Favorites</string>
    <string name="personal_information">Personal information</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="search">Search</string>
    <string name="no_search_result">No search result</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="posts">Posts</string>
    <string name="body">His mother had always taught him not to ever think of himself as better than others. He\'d tried to live by this motto. He never looked down on those who were less fortunate or who had less money than him. But the stupidity of the group of people he was talking to made him change his mind</string>

    <string-array name="languages">
        <item>English</item>
        <item>Armenian</item>
        <item>Russian</item>
    </string-array>
</resources>