<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:padding="@dimen/_16dp"
        tools:context=".module.launch.fragments.SignInFragment">

        <TextView
            android:id="@+id/textViewHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white_10"
            android:textSize="@dimen/_20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/sign_in_we_are_waiting_for_you"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp"
            app:layout_constraintTop_toBottomOf="@id/textViewHaveAccount" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/edit_text_styles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:hint="@string/email_username"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/textViewSignIn" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/edit_text_styles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

        <CheckBox
            android:id="@+id/checkboxRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:button="@drawable/check_box_selector"
            android:padding="@dimen/_8dp"
            android:text="@string/remember_me"
            android:textColor="@color/color_1_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/checkboxRemember" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>