<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:padding="@dimen/margin_16dp"
        tools:context=".module.launch.fragments.ResetPasswordEmailFragment">

        <TextView
            android:id="@+id/textViewResetPasswordEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetpassword_via_email"
            android:textColor="@color/color_1_70"
            android:textSize="@dimen/_20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewEnterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/color_1_60"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintTop_toBottomOf="@id/textViewResetPasswordEmail"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            style="@style/edit_text_styles"
            android:hint="@string/sample_email_com"
            app:layout_constraintTop_toBottomOf="@id/textViewEnterEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@drawable/button_selector"
            android:text="@string/reset_password"
            android:textColor="@color/color_1_70"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>