<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_26dp"
        tools:context=".module.account.ChangeLanguageFragment">


        <TextView
            android:id="@+id/changeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textSize="@dimen/_26dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/english"
            android:layout_marginTop="@dimen/_36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeLanguage" />

        <Button
            android:id="@+id/russia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/button_selector"
            android:text="@string/russian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/english" />


        <Button
            android:id="@+id/armenian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/button_selector"
            android:text="@string/armenian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/russia" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>