<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:padding="20dp"
        tools:context=".module.resetpassword.sms.ResetPasswordSMSFragment">

        <TextView
            android:id="@+id/textViewResetPasswordEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_via_sms"
            android:textColor="@color/color_1_70"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEnterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/please_enter_phone_number"
            android:textColor="@color/color_1_60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewResetPasswordEmail" />

        <EditText
            android:id="@+id/editTextCode"
            style="@style/edit_text_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11dp"
            android:text="@string/_374"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewEnterEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/getSmcLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/top_margin"
            android:hint="@string/xx_xxx_xxx"
            android:textColorHint="@color/color_1_40"
            app:endIconMode="clear_text"
            app:endIconTint="@color/color_1_40"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextCode"
            app:layout_constraintTop_toBottomOf="@id/textViewEnterEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/getSmc"
                style="@style/edit_text_styles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/send_sms"
            android:textAllCaps="false"
            android:textColor="@color/color_1_70"
            app:layout_constraintTop_toBottomOf="@id/getSmcLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>