<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dim_8dp"
        android:background="@color/background_sign_in">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/already_have_an_account"
            android:textColor="@color/color_question"
            android:textSize="@dimen/dim_22sp"
            android:paddingBottom="@dimen/dim_8dp"/>

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_view_sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_24sp"
            android:paddingTop="@dimen/dim_8dp"
            android:paddingBottom="@dimen/dim_8dp"/>

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:padding="@dimen/dim_16dp"
            android:inputType="text"
            android:hint="@string/email_username"
            android:textColor="@color/color_question"
            android:textColorHint="@color/color_question"
            android:background="@drawable/edit_texts_background"
            app:layout_constraintTop_toBottomOf="@id/textViewSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:padding="@dimen/dim_16dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/color_question"
            android:textColorHint="@color/color_question"
            android:background="@drawable/edit_texts_background"
            app:layout_constraintTop_toBottomOf="@id/editTextUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/checkboxRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/color_question"
            android:layout_marginTop="@dimen/dim_16dp"
            android:button="@drawable/checkbox_background"
            android:padding="@dimen/dim_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/dim_16dp"
            android:text="@string/sign_in"
            android:textColor="@color/color_question"
            app:layout_constraintTop_toBottomOf="@id/checkboxRememberMe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/dim_16dp"
            android:text="@string/sign_up"
            android:textColor="@color/color_question"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textSize="@dimen/dim_24sp"
            android:padding="@dimen/dim_8dp"
            android:textColor="@color/color_question"
            android:gravity="center"
            android:layout_marginTop="@dimen/dim_16dp"
            app:layout_constraintTop_toBottomOf="@id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>